# stock-bot

./: .gitignore  README.md  example.config.yml  example.env  main.py  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/: config.py  models.py  service.py  utils.py
tests/: dev_tests.py  tests.py
