[tool.poetry]
name = "stock-bot"
version = "0.1.0"
description = ""
authors = ["roedebaron"]
readme = "README.md"
packages = [{include = "stock_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.2.2"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
alpha-vantage = "^2.3.1"
pandas = "^1.5.3"
yfinance = "^0.2.12"
table2ascii = "^1.1.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
